# GeometricFaultModeling

./: .gitignore  CMakeLists.txt  README.md  readme.md
libs/SketchLib/Include/: CatmullRom.hpp  CurveN.hpp  VectorN.hpp
src/: boundingbox.cpp  boundingbox.hpp  boundingboxcwidget.cpp  boundingboxcwidget.hpp  cwidget.cpp  cwidget.hpp  drawable.cpp  drawable.hpp  fault.cpp  fault.hpp  faultcwidget.cpp  faultcwidget.hpp  faultdb.hpp  fcurve.cpp  fcurve.hpp  hrbf.cpp  hrbf.hpp  implicit.cpp  implicit.hpp  main.cpp  menu.cpp  menu.hpp  object.cpp  object.hpp  sketchcwidget.cpp  sketchcwidget.hpp  sketchplane.cpp  sketchplane.hpp  tree.cpp  tree.hpp  viewer.cpp  viewer.hpp
src/defs/: eigen_curveN_conversions.hpp  imvec2misc.hpp  rawparser.hpp
src/functions/: calculate_intersection_curves.hpp  separate_object_by_interpolant.hpp
src/geo/: extract_non_manifold_edge_curves.hpp  marching_squares.hpp  reorder_curve_edgelist.hpp  separate.hpp
